# politech-parser

./: .env.example  .gitignore  README.md  directions.json  pyproject.toml
parsed_data/: 01.03.02.json  01.03.03.json  01.03.05.json  02.03.01.json  02.03.03.json  03.03.01.json  03.03.02.json  08.03.01.json  08.05.01.json  09.03.01.json  09.03.02.json  09.03.03.json  09.03.04.json  10.03.01.json  10.05.01.json  10.05.03.json  10.05.04.json  11.03.01.json  11.03.02.json  11.03.04.json  12.03.04.json  13.03.01.json  13.03.02.json  13.03.03.json  14.03.01.json  14.05.02.json  15.03.01.json  15.03.02.json  15.03.03.json  15.03.04.json  15.03.05.json  15.03.06.json  16.03.01.json  19.03.01.json  19.03.03.json  19.03.04.json  20.03.01.json  22.03.01.json  22.03.02.json  23.03.01.json  (+28 more)
politech_parser/: collect_data.py  collect_data_by_id.py  console_parser.py  main.py  parse_directions.py  snils.py  tg_bot.py
polytech_parser/: collect_data.py  config.py  directions.json  draft.py  main.py  parse_directions.py  snils.py
polytech_parser/parsed_data/: 01.03.02.json  01.03.03.json  01.03.05.json  02.03.01.json  02.03.03.json  03.03.01.json  03.03.02.json  08.03.01.json  08.05.01.json  09.03.01.json  09.03.02.json  09.03.03.json  09.03.04.json  10.03.01.json  10.05.01.json  10.05.03.json  10.05.04.json  11.03.01.json  11.03.02.json  11.03.04.json  12.03.04.json  13.03.01.json  13.03.02.json  13.03.03.json  14.03.01.json  14.05.02.json  15.03.01.json  15.03.02.json  15.03.03.json  15.03.04.json  15.03.05.json  15.03.06.json  16.03.01.json  19.03.01.json  19.03.03.json  (+32 more)
